# divine-simplicity

./: .gitignore  LICENSE  README.md  app.py  setup.cfg
assets/: modern.css  shiny_posttx_app.css  srtr_shiny.css
divine_simplicity/: constants.py  geometry.py  plotting.py
tests/: constants_test.py  geometry_test.py
