[metadata]
name = divine_simplicity
version = 0.0.0
description = Understanding divine simplicity with triangles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NicholasLinderWood/divine-simplicity.git
author = Nicholas Wood
author_email = nicholaslinderwood@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
